<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.development.ro_ixen.dicecalculator.DiceCalculator">
    <TableRow>
        <TextView
            android:id="@+id/calculationView"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="35dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/resultValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/result_label" />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/oneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:layout_weight="1" />

        <Button
            android:id="@+id/twoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:layout_weight="1" />

        <Button
            android:id="@+id/threeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/fourButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:layout_weight="1"  />

        <Button
            android:id="@+id/fiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:layout_weight="1"  />

        <Button
            android:id="@+id/sixButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:layout_weight="1"  />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/sevenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:layout_weight="1"  />

        <Button
            android:id="@+id/eightButton"
            android:text="@string/eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"  />

        <Button
            android:text="@string/nine"
            android:id="@+id/nineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"  />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/plusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_symbol"
            android:layout_weight="1"  />

        <Button
            android:id="@+id/zeroButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:layout_weight="1" />

        <Button
            android:id="@+id/minusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_symbol"
            android:layout_weight="1"  />
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/dButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dice_symbol"
            android:layout_weight="1"  />

        <Button
            android:id="@+id/goButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_label"
            android:layout_weight="1"  />

        <Button
            android:id="@+id/historyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_button_label"
            android:layout_weight="1"  />
    </TableRow>





</TableLayout>
